# igor

./: .gitignore  Cargo.toml  CargoCult.toml  README.md
docker-compose/containerized-nix/: docker-compose.yaml
example-thundercloud/: thundercloud.yaml
example-thundercloud/cumulus/sandbox/: zer_castle+fragment-steam-quirm.yaml  zer_castle+option-steam.yaml
example-thundercloud/cumulus/workshop/: README.md  clock+example-glass.yaml  clock+fragment-glass-spring.yaml  clock+option-glass.yaml  dot+config.yaml  dot_bashrc+option-bash_config  x_dot_slash+option-contrived.md  x_x_x+config-kermie  x_x_x+config-kermie.toml  x_x_x+example-kermie  x_x_x+option-kermie
example-thundercloud/cumulus/workshop/hail/: stones+option-storm.md
niches/containerized-nix/invar/: README+fragment-unused.md
niches/example/: settings.toml
niches/example/invar/workshop/: README+fragment-@-details.md  clock+config-glass.yaml.toml
niches/profile/: settings.toml
niches/profile/local/: thundercloud.toml
niches/profile/local/cumulus/niches/project-settings/invar/etc/: settings-local+config.sh+config.toml.toml  settings-local+config.sh+option.toml
niches/project-settings/: settings.toml
niches/project-settings/etc/: settings.sh
niches/project-settings/invar/etc/: settings-local+fragment-@-default.sh  settings-local+fragment-@-jeroen.sh
niches/project-settings/local/: thundercloud.toml
niches/project-settings/local/cumulus/etc/: settings-local+option.sh
src/: config_model.rs  file_system.rs  interpolate.rs  lib.rs  main.rs  niche.rs  path.rs  thundercloud.rs
src/config_model/: git_remote_config.rs  git_remote_config_data.rs  invar_config.rs  invar_config_data.rs  niche_config.rs  niche_config_data.rs  niche_description.rs  niche_description_data.rs  project_config.rs  project_config_data.rs  psychotropic.rs  psychotropic_data.rs  thunder_config.rs  thunder_config_data.rs  thundercloud_config.rs  thundercloud_config_data.rs  use_thundercloud_config.rs  use_thundercloud_config_data.rs
src/file_system/: fixture.rs  real.rs
yeth-marthter/example/: igor-thettingth.yaml
yeth-marthter/example/invar/workshop/: README+fragment-@-details.md
yeth-mathtur/example/: igor-thettingth.yaml  thettingth.yaml
yeth-mathtur/example/invar/workshop/: README+fragment-@-details.md  clock+config-glass.yaml  clock+fragment-glass-spring.yaml  clock+overwrite-glass.yaml
yeth-mathtur/example/invar/workshop/bench/: press+option-free
