[package]
name = "igor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "^0.8.11"
anyhow = "^1.0.81"
clap = { version = "^4.5.4", features = ["derive"] }
env_logger = "^0.11.3"
log = "^0.4.21"
once_cell = "^1.19.0"
regex = "^1.10.4"
serde_yaml = "0.9.33"
tokio = { version = "^1.36.0", features = ["macros","rt-multi-thread","time","signal","fs","io-util"] }
tokio-stream = "^0.1.15"
serde = { version = "1.0.197", features = ["derive"] }

[dev-dependencies]
stringreader = "^0.1.1"
test-log = "^0.2.16"
