[package]
name = "igor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "^0.8.11"
anyhow = "^1.0.81"
async-stream = "^0.3.5"
async-trait = "^0.1.81"
clap = { version = "^4.5.4", features = ["derive"] }
env_logger = "^0.11.3"
indoc = "2.0.5"
log = "^0.4.21"
once_cell = "^1.19.0"
regex = "^1.10.4"
serde_yaml = "0.9.33"
stringreader = "^0.1.1"
tokio = { version = "^1.36.0", features = ["macros","rt-multi-thread","time","signal","fs","io-util"] }
tokio-stream = {  version = "^0.1.15", features = ["fs"] }
serde = { version = "1.0.197", features = ["derive"] }
verbatim = "^0.1.1"

[dev-dependencies]
assert_fs = "^1.1.2"
test-log = "^0.2.16"
