[package]
name = "igor"
description = "Generic text-based vendoring"
version = "0.1.1"
edition = "2021"
authors = ["Jeroen van Maanen"]
readme = "README.md"
homepage = "https://github.com/rustigaan/igor"
repository = "https://github.com/rustigaan/igor"
license = "MIT"

[dependencies]
ahash = "^0.8.11"
anyhow = "^1.0.81"
async-stream = "^0.3.5"
base16ct = "0.2.0"
clap = { version = "^4.5.4", features = ["derive"] }
env_logger = "^0.11.3"
indoc = "2.0.5"
log = "^0.4.21"
once_cell = "^1.19.0"
regex = "^1.10.4"
serde = { version = "1.0.197", features = ["derive"] }
serde_yaml = "0.9.33"
sha2 = "0.10.8"
stringreader = "^0.1.1"
toml = "^0.9.2"
tokio = { version = "^1.44.2", features = ["macros","rt-multi-thread","time","process","signal","fs","io-util"] }
tokio-stream = {  version = "^0.1.15", features = ["fs"] }

[dev-dependencies]
assert_fs = "^1.1.2"
test-log = "^0.2.16"

[[bin]]
name = "cargo-cult"
path = "src/main.rs"

[[bin]]
name = "igor"
path = "src/main.rs"